[project]
name = "crypto-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "SharpKoi",email = "sharpkoi1222@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
